--- a/views/event.ejs
+++ b/views/event.ejs
@@ -478,7 +478,7 @@
                                 <!-- ---------------------- comment testing---------------------------- -->
                                 <div class="comment col-3 " onclick="showCommentModal('<%= userdetail._id %>')">
                                   <i class="far fa-comment" style="color:#e74c3c;font-size:20px;"></i>
-                                  <b style="color:#e74c3c;font-size: 20px;">&nbsp;0</b>
+                                  <b style="color:#e74c3c;font-size: 20px;">&nbsp;<%= userdetail.e_comments_count%></b>
                                 </div>
 
                                 <div class="upvote-button col-3  ">
